
syntax = "proto3";
option csharp_namespace = "ActorPlayground.Remote";

message PID {
  string Address = 1;
  string Id = 2;
}

message MessageBatch {
  repeated MessageEnvelope envelopes = 1;
}

message MessageEnvelope {
  string message_type = 1;
  bytes message_data = 2;
  bool has_response = 3;
  PID sender = 4;
}

message ConnectRequest{
  PID sender = 1;
}

message ConnectResponse{
}

message Unit {}

service Remoting {
  rpc Receive (stream MessageBatch) returns (stream MessageBatch) {}
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
  rpc Send (MessageEnvelope) returns (MessageEnvelope) {}
}
